--- a/notebooks/MWE_fish_phtostim.ipynb
+++ b/notebooks/MWE_fish_phtostim.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import photostimulation as ps\n",
+    "import adaptive_latents.stimulation.photostimulation as ps\n",
     "import adaptive_latents as al\n",
     "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, default_rwd_parameters, BWRun\n",
     "from adaptive_latents.transforms.utils import prosvd_data"
@@ -35,9 +35,9 @@
    "outputs": [],
    "source": [
     "# Specify the paths to the files\n",
-    "stim_file_path = '../../generated/datasets/fish/output_020424_ds1/stimmed.txt'\n",
-    "C_file_path = '../../generated/datasets/fish/output_020424_ds1/analysis_proc_C.txt'\n",
-    "photo_file_path = '../../generated/datasets/fish/output_020424_ds1/photostims.npy'\n",
+    "stim_file_path = '../generated/datasets/fish/output_020424_ds1/stimmed.txt'\n",
+    "C_file_path = '../generated/datasets/fish/output_020424_ds1/analysis_proc_C.txt'\n",
+    "photo_file_path = '../generated/datasets/fish/output_020424_ds1/photostims.npy'\n",
     "\n",
     "# Load the files\n",
     "stim = np.loadtxt(stim_file_path) \n",
@@ -221,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adaptive_latents",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -235,9 +235,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
