fixed bug on plotting_functions, now red lines appear

--- a/notebooks/MWE_fish_phtostim.ipynb
+++ b/notebooks/MWE_fish_phtostim.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "import adaptive_latents.stimulation.photostimulation as ps\n",
     "import adaptive_latents as al\n",
-    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, default_rwd_parameters, BWRun\n",
+    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, BWRun\n",
     "from adaptive_latents.transforms.utils import prosvd_data"
    ]
   },
@@ -34,10 +34,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Specify the paths to the files\n",
-    "stim_file_path = '../generated/datasets/fish/output_020424_ds1/stimmed.txt'\n",
-    "C_file_path = '../generated/datasets/fish/output_020424_ds1/analysis_proc_C.txt'\n",
-    "photo_file_path = '../generated/datasets/fish/output_020424_ds1/photostims.npy'\n",
+    "stim_file_path = '../workspace/datasets/fish/output_020424_ds1/stimmed.txt'\n",
+    "C_file_path = '../workspace/datasets/fish/output_020424_ds1/analysis_proc_C.txt'\n",
+    "photo_file_path = '../workspace/datasets/fish/output_020424_ds1/photostims.npy'\n",
     "\n",
     "# Load the files\n",
     "stim = np.loadtxt(stim_file_path) \n",
@@ -85,7 +86,7 @@
    "source": [
     "t = np.arange(smallC_photo.shape[0])\n",
     "in_ds = NumpyTimedDataSource(smallC_photo, t, time_offsets=(0,1))\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape, **dict(default_rwd_parameters, M=100, num=1000, B_thresh=-10, num_grad_q=1))"
+    "bw = Bubblewrap(dim=in_ds.output_shape,M=100, num=1000, B_thresh=-10, num_grad_q=1)"
    ]
   },
   {
@@ -96,7 +97,7 @@
    "source": [
     "#run BW\n",
     "br = BWRun(bw=bw, in_ds=in_ds)\n",
-    "br.run(limit=5500, save=False)"
+    "br.run(bw_step_limit=5500, save_bw_history=False)"
    ]
   },
   {
@@ -185,7 +186,7 @@
    "outputs": [],
    "source": [
     "#for neuron 31:\n",
-    "al.plotting_functions.compare_metrics([br], offset=1, red_lines_frames=photostim[:, 0] , xlim_start=3330, xlim_end=3500)"
+    "al.plotting_functions.compare_metrics([br], offset=1, red_lines_frames=photostim[:, 0] , xlim=[3300,3500])"
    ]
   },
   {
@@ -235,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
