adds two transformer performance quantification plots

--- a/notebooks/try_out_mmica.ipynb
+++ b/notebooks/try_out_mmica.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Imports"
@@ -16,14 +19,13 @@
     "ExecuteTime": {
      "end_time": "2024-07-01T16:16:39.913838Z",
      "start_time": "2024-07-01T16:16:39.809315Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from adaptive_latents.transforms.ica import mmICA\n",
-    "from adaptive_latents.transforms.proSVD import  proSVD\n",
+    "from adaptive_latents.transforms.prosvd import  proSVD\n",
     "import adaptive_latents as al\n",
     "import matplotlib.pyplot as plt\n",
     "import timeit\n",
@@ -38,7 +40,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Define a Dataset"
@@ -47,22 +52,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:41.116579Z",
-     "start_time": "2024-07-01T16:16:39.817931Z"
-    },
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "A,  beh, t, beh_time = map(lambda x: x[:-10], al.construct_indy_data(al.input_sources.datasets.individual_identifiers['indy'][-1], .03))\n",
-    "\n",
-    "# A, beh, t, beh_time = al.construct_buzaki_data(individual_identifier=al.input_sources.datasets.individual_identifiers['buzaki'][-1], bin_width=.03)\n",
-    "\n",
-    "print(f\"dataset is {(t[-1] - t[0])/60:.1f} minutes long\")\n",
-    "\n",
-    "A_true = None"
+    "performances = []"
    ]
   },
   {
@@ -72,45 +65,34 @@
     "ExecuteTime": {
      "end_time": "2024-07-01T16:16:41.116727Z",
      "start_time": "2024-07-01T16:16:41.105992Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
-    "# n_timepoints, n_dimensions = 27_256, 315\n",
-    "n_timepoints, n_dimensions = 10_000, 10\n",
+    "n_blocks, n_points_per_block, n_dimensions = 700, 10, 10\n",
     "\n",
-    "# A_true = rng.laplace(size=(n_timepoints, n_dimensions))\n",
-    "# A_true = rng.standard_cauchy(size=(n_timepoints, n_dimensions))\n",
-    "A_true = rng.poisson(1, size=(n_timepoints, n_dimensions))\n",
+    "size = (n_blocks, n_points_per_block, n_dimensions)\n",
+    "# A_true = rng.laplace(size=size)\n",
+    "# A_true = rng.standard_cauchy(size=size)\n",
+    "A_true = rng.poisson(.5, size=size)\n",
     "\n",
-    "W = rng.normal(size=[A_true.shape[1]]*2)\n",
-    "# W = ortho_group.rvs(A_true.shape[1])\n",
+    "t = np.arange(np.prod(size[:-1])).reshape(size[:-1]) * 0.01\n",
+    "block_t = t[:,-1]\n",
     "\n",
-    "A = A_true @ W\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:41.175256Z",
-     "start_time": "2024-07-01T16:16:41.106149Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pca = PCA().fit(A)\n",
-    "plt.plot(pca.explained_variance_)"
+    "mixing_matrix = rng.normal(size=[A_true.shape[2]]*2)\n",
+    "# mixing_matrix = ortho_group.rvs(A_true.shape[2])\n",
+    "\n",
+    "\n",
+    "A = A_true @ mixing_matrix.T"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Run mmICA"
@@ -124,27 +106,31 @@
      "end_time": "2024-07-01T16:16:42.254300Z",
      "start_time": "2024-07-01T16:16:41.178217Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
-    "block_size = 10\n",
-    "assert block_size <= A.shape[1]\n",
+    "pro = proSVD(k=n_dimensions)\n",
+    "# ica = mmICA(density='huber', track_extra_info=True, maxiter_cg=20, tol=1e-15)\n",
+    "ica = mmICA(alpha=.7)\n",
     "\n",
-    "pro = proSVD(k=block_size, centering=True)\n",
-    "ica = mmICA(p=block_size, density='huber', track_extra_info=True, maxiter_cg=20, tol=1e-15)\n",
-    "\n",
-    "start_index = block_size + (A.shape[0] % block_size)\n",
-    "pro.initialize(A[:start_index, :].T)\n",
+    "start_index = 5\n",
+    "pro.initialize(A[:start_index].reshape((-1,A.shape[-1])).T)\n",
+    "t, block_t = t[-(A.shape[0]-start_index):], block_t[-(A.shape[0]-start_index):]\n",
     "\n",
     "Ws = []\n",
     "Qs = []\n",
     "ica_times = []\n",
     "pro_times = []\n",
     "\n",
-    "for block in A[start_index:,:].reshape(-1, block_size, A.shape[1]):\n",
+    "for block in A[start_index:]:\n",
     "    start = timeit.default_timer()\n",
-    "    block = pro.update_and_project(block.T)\n",
+    "    # pro.updateSVD(block.T)\n",
+    "    block = pro.project(block.T).T\n",
+    "    block = block.T\n",
     "    pro_times.append(timeit.default_timer() - start)\n",
     "\n",
     "\n",
@@ -164,12 +150,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "performance = [np.linalg.norm(permute(d @ q.T @ mixing_matrix) - np.eye(n_dimensions)) for d,q in zip(Ws,Qs)]\n",
+    "performances.insert(0,performance)\n",
+    "\n",
+    "offline_performance = np.linalg.norm(\n",
+    "    permute(FastICA(max_iter=5000).fit(A.reshape((-1, n_dimensions))).components_ @ mixing_matrix) \n",
+    "    - np.eye(n_dimensions)\n",
+    ")\n",
+    "\n",
+    "for p in performances[1:]:\n",
+    "    plt.plot(block_t, p, color='k', alpha=.5)\n",
+    "plt.plot(block_t, performances[0])\n",
+    "plt.axhline(offline_performance, color='r')\n",
+    "plt.semilogy();\n",
+    "plt.ylabel('error')\n",
+    "plt.xlabel('time (s)');\n",
+    "# plt.ylim([0,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.matshow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-01T16:16:42.257676Z",
      "start_time": "2024-07-01T16:16:42.256108Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -181,47 +203,42 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:42.422502Z",
-     "start_time": "2024-07-01T16:16:42.258057Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(np.array(ica.hit_iter_history), '.', alpha=.1, color='k');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-07-01T16:16:42.588940Z",
      "start_time": "2024-07-01T16:16:42.437554Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(layout='tight', figsize=(9,3))\n",
-    "ica.hit_norm_history = np.array(ica.hit_norm_history)\n",
-    "# m = ica.hit_norm_history[:200,7,:]\n",
-    "m = np.nanmax(ica.hit_norm_history[:,:,:], axis=1)\n",
-    "c = ax.matshow(np.log(np.squeeze(m)).T, vmin=np.log(ica.tol), origin='lower', aspect='auto')\n",
-    "ax.set_xlabel(\"data block #\")\n",
-    "ax.set_ylabel(\"inner loop iteration #\")\n",
-    "ax.set_title(\"max convergence metric across all rows\")\n",
-    "cbar = fig.colorbar(c)\n",
-    "\n",
-    "cbar.ax.get_yaxis().labelpad=15\n",
-    "cbar.set_label(\"log convergence metric\", rotation=270)\n",
+    "if ica.hit_iter_history:\n",
+    "    plt.figure()\n",
+    "    plt.plot(np.array(ica.hit_iter_history), '.', alpha=.1, color='k');\n",
+    "    \n",
+    "    fig, ax = plt.subplots(layout='tight', figsize=(9,3))\n",
+    "    ica.hit_norm_history = np.array(ica.hit_norm_history)\n",
+    "    # m = ica.hit_norm_history[:200,7,:]\n",
+    "    m = np.nanmax(ica.hit_norm_history[:,:,:], axis=1)\n",
+    "    c = ax.matshow(np.log(np.squeeze(m)).T, vmin=np.log(ica.tol), origin='lower', aspect='auto')\n",
+    "    ax.set_xlabel(\"data block #\")\n",
+    "    ax.set_ylabel(\"inner loop iteration #\")\n",
+    "    ax.set_title(\"max convergence metric across all rows\")\n",
+    "    cbar = fig.colorbar(c)\n",
+    "    \n",
+    "    cbar.ax.get_yaxis().labelpad=15\n",
+    "    cbar.set_label(\"log convergence metric\", rotation=270)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Asess performance"
@@ -230,7 +247,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Time to run"
@@ -244,7 +264,10 @@
      "end_time": "2024-07-01T16:16:42.648750Z",
      "start_time": "2024-07-01T16:16:42.591343Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -259,7 +282,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Kurtosis"
@@ -268,13 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:43.664496Z",
-     "start_time": "2024-07-01T16:16:42.648133Z"
-    },
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -282,7 +302,7 @@
     "\n",
     "datasets = {}\n",
     "\n",
-    "dim_reduced_data = pro.project(A.T)\n",
+    "dim_reduced_data = pro.project(A.reshape((-1, A.shape[-1])).T)\n",
     "datasets['input'] = dim_reduced_data\n",
     "datasets['mmICA'] = ica.W @ dim_reduced_data\n",
     "\n",
@@ -300,8 +320,8 @@
     "    return u @ np.diag(1/s) @ u.T @ whitened_data\n",
     "\n",
     "if A_true is not None:\n",
-    "    datasets['ground truth'] = A_true[:,:block_size].T\n",
-    "    datasets['whitened ground truth'] = whiten(A_true[:,:block_size].T)\n",
+    "    datasets['ground truth'] = A_true.reshape((-1, A.shape[-1])).T\n",
+    "    datasets['whitened ground truth'] = whiten(A_true.reshape((-1, A.shape[-1])).T)\n",
     "\n",
     "\n",
     "\n",
@@ -313,8 +333,8 @@
     "\n",
     "single_line_styles = {\n",
     "    'mmICA': dict(color='C0', linestyle='-', marker='.'),\n",
-    "    # 'input': dict(color='orange'),\n",
-    "    # 'ground truth': dict(color='#D4AF37'),\n",
+    "    'input': dict(color='orange'),\n",
+    "    'ground truth': dict(color='#D4AF37'),\n",
     "    'whitened ground truth': dict(color='#D4AF37', marker='.'),\n",
     "    'FastICA': dict(color='red'),\n",
     "    'pca': dict(color='green'),\n",
@@ -336,7 +356,7 @@
     "    idx = np.argsort(evaluation_metric(dataset))\n",
     "    sorted_dataset = dataset[idx, :]\n",
     "    datasets[key] = sorted_dataset\n",
-    "    ax.plot(np.arange(block_size), evaluation_metric(sorted_dataset), label=key, **single_line_styles[key])\n",
+    "    ax.plot(evaluation_metric(sorted_dataset), label=key, **single_line_styles[key])\n",
     "\n",
     "multi_line_styles = {\n",
     "    'random whitened': dict(alpha=.1, color='k'),\n",
@@ -348,7 +368,7 @@
     "        idx = np.argsort(evaluation_metric(dataset))\n",
     "        sorted_dataset = dataset[idx, :]\n",
     "        label = key if i == 0 else None\n",
-    "        ax.plot(np.arange(block_size), evaluation_metric(sorted_dataset), label=label, **multi_line_styles[key])\n",
+    "        ax.plot(evaluation_metric(sorted_dataset), label=label, **multi_line_styles[key])\n",
     "\n",
     "ax.set_title(f\"Sorted {metric_name} per component\")\n",
     "ax.legend();\n",
@@ -358,7 +378,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Compare offline and online"
@@ -372,7 +395,10 @@
      "end_time": "2024-07-01T16:16:43.765597Z",
      "start_time": "2024-07-01T16:16:43.664168Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -388,7 +414,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Correlation with true latents"
@@ -402,32 +431,36 @@
      "end_time": "2024-07-01T16:16:43.881780Z",
      "start_time": "2024-07-01T16:16:43.774320Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "if A_true is not None:\n",
     "    fig, ax = plt.subplots(ncols=2)\n",
+    "    a = datasets['ground truth']\n",
+    "    ax[0].set_ylabel('ground truth')\n",
     "\n",
-    "    cov = np.corrcoef(A_true.T, datasets['mmICA'])[:-datasets['mmICA'].shape[0],A_true.shape[1]:]\n",
-    "    if A_true.T.shape == datasets['mmICA'].shape:\n",
-    "        cov = permute(cov, scale=False)\n",
-    "    ax[0].matshow(np.abs(cov), vmin=.1, vmax=1)\n",
-    "    ax[0].set_title(\"online\")\n",
+    "    for i, name in enumerate(['mmICA', 'FastICA']):\n",
+    "        b=datasets[name]\n",
+    "        cov = np.corrcoef(a, b)[:a.shape[0], a.shape[0]:]\n",
+    "        if cov.shape[0] == cov.shape[1]:\n",
+    "            cov = permute(cov, scale=False)\n",
+    "        ax[i].matshow(np.abs(cov), vmin=.1, vmax=1)\n",
+    "        ax[i].set_title(name)\n",
     "\n",
-    "\n",
-    "    cov = np.corrcoef(A_true.T, datasets['FastICA'])[:-datasets['FastICA'].shape[0],A_true.shape[1]:]\n",
-    "    if A_true.T.shape == datasets['FastICA'].shape:\n",
-    "        cov = permute(cov, scale=False)\n",
-    "    ax[1].matshow(np.abs(cov), vmin=.1, vmax=1)\n",
-    "    ax[1].set_title(\"offline\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Convergence"
@@ -441,7 +474,10 @@
      "end_time": "2024-07-01T16:16:44.055881Z",
      "start_time": "2024-07-01T16:16:43.886751Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -467,7 +503,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## The distribution metric"
@@ -481,7 +520,10 @@
      "end_time": "2024-07-01T16:16:44.126968Z",
      "start_time": "2024-07-01T16:16:44.056969Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -498,33 +540,109 @@
      "end_time": "2024-07-01T16:16:44.181252Z",
      "start_time": "2024-07-01T16:16:44.126786Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "plt.scatter(statistics, ica.cumulants)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JPCA Temp Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from adaptive_latents.input_sources.timed_data_source import GeneratorDataSource"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-01T16:16:44.182645Z",
+     "start_time": "2024-07-01T16:16:44.181659Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import adaptive_latents.transforms as tr\n",
+    "\n",
+    "jp = tr.jpca.TransformerSJPCA()\n",
+    "X_realigned = jp.offline_fit_transform(X)\n",
+    "U = jp.last_U\n",
+    "assert not np.allclose(U[:, :2], true_variables['C'])\n",
+    "\n",
+    "aligned_U, aligned_C = tr.jpca.align_column_spaces(U[:, :2], true_variables['C'])\n",
+    "assert np.allclose(aligned_U, aligned_C, atol=1e-4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, X_dot, true_variables = tr.jpca.generate_circle_embedded_in_high_d(rng, m=1000, stddev=.1)\n",
+    "jp = tr.jpca.TransformerSJPCA()\n",
+    "\n",
+    "errors = []\n",
+    "g = (row[None,:] for row in X)\n",
+    "for row in jp.generator_fit_transform(GeneratorDataSource(g)):\n",
+    "    U = jp.last_U\n",
+    "    if U is not None:\n",
+    "        aligned_U, aligned_C = tr.jpca.align_column_spaces(U[:, :2], true_variables['C'])\n",
+    "        errors.append(np.linalg.norm(aligned_U - aligned_C))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.arange(len(errors)) * 0.01, errors)\n",
+    "plt.ylabel('error')\n",
+    "plt.xlabel('time (s)')\n",
+    "plt.title('sjPCA convergence')\n",
+    "plt.semilogy();"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
