adds mid-run hooks to transformer run_on

--- a/notebooks/try_out_mmica.ipynb
+++ b/notebooks/try_out_mmica.ipynb
@@ -33,8 +33,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from adaptive_latents.transforms.ica import mmICA\n",
-    "from adaptive_latents.transforms.prosvd import  proSVD\n",
+    "from adaptive_latents.transforms.ica import BasemmICA\n",
+    "from adaptive_latents.transforms.prosvd import  BaseProSVD\n",
     "import adaptive_latents as al\n",
     "import matplotlib.pyplot as plt\n",
     "import timeit\n",
@@ -122,9 +122,9 @@
    },
    "outputs": [],
    "source": [
-    "pro = proSVD(k=n_dimensions)\n",
+    "pro = BaseProSVD(k=n_dimensions)\n",
     "# ica = mmICA(density='huber', track_extra_info=True, maxiter_cg=20, tol=1e-15)\n",
-    "ica = mmICA(alpha=.7)\n",
+    "ica = BasemmICA(alpha=.7)\n",
     "\n",
     "start_index = 5\n",
     "pro.initialize(A[:start_index].reshape((-1,A.shape[-1])).T)\n",
@@ -727,8 +727,8 @@
    "source": [
     "import adaptive_latents.transforms as tr\n",
     "\n",
-    "jp = tr.jpca.TransformerSJPCA()\n",
-    "X_realigned = jp.offline_fit_transform(X)\n",
+    "jp = tr.jpca.sjPCA()\n",
+    "X_realigned = jp.offline_run_on(X)\n",
     "U = jp.last_U\n",
     "assert not np.allclose(U[:, :2], true_variables['C'])\n",
     "\n",
@@ -743,11 +743,11 @@
    "outputs": [],
    "source": [
     "X, X_dot, true_variables = tr.jpca.generate_circle_embedded_in_high_d(rng, m=1000, stddev=.1)\n",
-    "jp = tr.jpca.TransformerSJPCA()\n",
+    "jp = tr.jpca.sjPCA()\n",
     "\n",
     "errors = []\n",
     "g = (row[None,:] for row in X)\n",
-    "for row in jp.generator_fit_transform(GeneratorDataSource(g)):\n",
+    "for row in jp.run_on(GeneratorDataSource(g)):\n",
     "    U = jp.last_U\n",
     "    if U is not None:\n",
     "        aligned_U, aligned_C = tr.jpca.align_column_spaces(U[:, :2], true_variables['C'])\n",
