--- a/notebooks/try_out_mmica.ipynb
+++ b/notebooks/try_out_mmica.ipynb
@@ -17,16 +17,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:39.913838Z",
-     "start_time": "2024-07-01T16:16:39.809315Z"
+     "end_time": "2024-08-09T16:22:16.342708Z",
+     "start_time": "2024-08-09T16:22:15.393712Z"
     }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from adaptive_latents.transforms.ica import BasemmICA\n",
-    "from adaptive_latents.transforms.prosvd import  BaseProSVD\n",
-    "import adaptive_latents as al\n",
+    "from adaptive_latents.ica import BaseMMICA\n",
+    "from adaptive_latents.prosvd import  BaseProSVD\n",
+    "import adaptive_latents\n",
     "import matplotlib.pyplot as plt\n",
     "import timeit\n",
     "from scipy.stats import kurtosis, ortho_group\n",
@@ -52,7 +52,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T16:22:16.388300Z",
+     "start_time": "2024-08-09T16:22:16.386970Z"
+    }
+   },
    "outputs": [],
    "source": [
     "performances = []"
@@ -63,8 +68,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:41.116727Z",
-     "start_time": "2024-07-01T16:16:41.105992Z"
+     "end_time": "2024-08-09T16:22:20.398862Z",
+     "start_time": "2024-08-09T16:22:20.386805Z"
     }
    },
    "outputs": [],
@@ -103,8 +108,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:42.254300Z",
-     "start_time": "2024-07-01T16:16:41.178217Z"
+     "end_time": "2024-08-09T16:22:22.342301Z",
+     "start_time": "2024-08-09T16:22:21.608904Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -115,11 +120,13 @@
    "source": [
     "pro = BaseProSVD(k=n_dimensions)\n",
     "# ica = mmICA(density='huber', track_extra_info=True, maxiter_cg=20, tol=1e-15)\n",
-    "ica = BasemmICA(alpha=.7)\n",
+    "ica = BaseMMICA(alpha=.7)\n",
     "\n",
     "start_index = 5\n",
     "pro.initialize(A[:start_index].reshape((-1,A.shape[-1])).T)\n",
     "t, block_t = t[-(A.shape[0]-start_index):], block_t[-(A.shape[0]-start_index):]\n",
+    "\n",
+    "ica.set_p(pro.k)\n",
     "\n",
     "Ws = []\n",
     "Qs = []\n",
@@ -150,7 +157,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T16:22:24.843161Z",
+     "start_time": "2024-08-09T16:22:24.517683Z"
+    }
+   },
    "outputs": [],
    "source": [
     "performance = [np.linalg.norm(permute(d @ q.T @ mixing_matrix) - np.eye(n_dimensions)) for d,q in zip(Ws,Qs)]\n",
@@ -174,19 +186,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.matshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:42.257676Z",
-     "start_time": "2024-07-01T16:16:42.256108Z"
+     "end_time": "2024-08-09T16:22:25.134324Z",
+     "start_time": "2024-08-09T16:22:25.128911Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -203,8 +206,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:42.588940Z",
-     "start_time": "2024-07-01T16:16:42.437554Z"
+     "end_time": "2024-08-09T16:22:34.568051Z",
+     "start_time": "2024-08-09T16:22:34.560686Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -261,8 +264,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:42.648750Z",
-     "start_time": "2024-07-01T16:16:42.591343Z"
+     "end_time": "2024-08-09T16:22:37.004350Z",
+     "start_time": "2024-08-09T16:22:36.770046Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -294,7 +297,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T16:22:43.005166Z",
+     "start_time": "2024-08-09T16:22:42.298231Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -392,8 +400,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:43.765597Z",
-     "start_time": "2024-07-01T16:16:43.664168Z"
+     "end_time": "2024-08-09T16:22:44.357816Z",
+     "start_time": "2024-08-09T16:22:44.138133Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -428,8 +436,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:43.881780Z",
-     "start_time": "2024-07-01T16:16:43.774320Z"
+     "end_time": "2024-08-09T16:22:45.591818Z",
+     "start_time": "2024-08-09T16:22:45.363982Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -471,8 +479,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:44.055881Z",
-     "start_time": "2024-07-01T16:16:43.886751Z"
+     "end_time": "2024-08-09T16:26:10.159815Z",
+     "start_time": "2024-08-09T16:26:09.878705Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -481,22 +489,22 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(nrows=2, layout='tight')\n",
+    "fig, ax = plt.subplots(nrows=1, layout='tight')\n",
+    "ax = [ax]\n",
     "\n",
     "changes = np.linalg.norm(np.diff(Ws, axis=0), axis=2) / np.linalg.norm(Ws, axis=2)[:-1]\n",
-    "ax[0].plot((np.arange(changes.shape[0]) + 1)*block_size,changes)\n",
-    "ax[0].set_title(\"Convergence of the rows of W\")\n",
-    "ax[0].set_xlabel(\"points seen\")\n",
+    "ax[0].plot((np.arange(changes.shape[0]) + 1)*n_points_per_block * 0.03,changes)\n",
+    "ax[0].set_title(\"Convergence of the rows of W (mmICA)\")\n",
+    "ax[0].set_xlabel(\"time (s)\")\n",
     "ax[0].set_ylabel(r\"$\\frac{\\Delta r}{\\Vert r \\Vert}$\")\n",
+    "# ax[0].semilogy()\n",
     "# ax[0].set_ylim([0,.1])\n",
     "\n",
-    "changes = np.linalg.norm(np.diff(Qs, axis=0), axis=1)/ np.linalg.norm(Qs, axis=1)[:-1]\n",
-    "# changes = (np.diff(Qs, axis=0)**2).mean(axis=(1,2))\n",
-    "ax[1].plot((np.arange(changes.shape[0]) + 1)*block_size,changes)\n",
-    "ax[1].set_title(\"Convergence of the columns of Q\")\n",
-    "ax[1].set_xlabel(\"points seen\")\n",
-    "ax[1].set_ylabel(r\"$\\frac{\\Delta r}{\\Vert r \\Vert}$\");\n",
-    "# ax[1].set_ylim([0,.1]);\n",
+    "# changes = np.linalg.norm(np.diff(Qs, axis=0), axis=1)/ np.linalg.norm(Qs, axis=1)[:-1]\n",
+    "# ax[1].plot((np.arange(changes.shape[0]) + 1)*n_points_per_block,changes)\n",
+    "# ax[1].set_title(\"Convergence of the columns of Q\")\n",
+    "# ax[1].set_xlabel(\"points seen\")\n",
+    "# ax[1].set_ylabel(r\"$\\frac{\\Delta r}{\\Vert r \\Vert}$\");\n",
     "\n"
    ]
   },
@@ -517,8 +525,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:44.126968Z",
-     "start_time": "2024-07-01T16:16:44.056969Z"
+     "end_time": "2024-08-06T22:27:37.395641Z",
+     "start_time": "2024-08-06T22:27:37.355411Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -527,7 +535,7 @@
    },
    "outputs": [],
    "source": [
-    "demixed_data = ica.W @ pro.project(A.T)\n",
+    "demixed_data = ica.W @ pro.project(A.reshape((-1, n_dimensions)).T)\n",
     "statistics = ica.density.logp(demixed_data).mean(axis=1)\n",
     "plt.bar(x=np.arange(len(statistics)), height=statistics)"
    ]
@@ -537,8 +545,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:44.181252Z",
-     "start_time": "2024-07-01T16:16:44.126786Z"
+     "end_time": "2024-08-06T22:27:37.436253Z",
+     "start_time": "2024-08-06T22:27:37.396245Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -548,79 +556,6 @@
    "outputs": [],
    "source": [
     "plt.scatter(statistics, ica.cumulants)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# JPCA Temp Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from adaptive_latents.input_sources.timed_data_source import GeneratorDataSource"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-01T16:16:44.182645Z",
-     "start_time": "2024-07-01T16:16:44.181659Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import adaptive_latents.transforms as tr\n",
-    "\n",
-    "jp = tr.jpca.sjPCA()\n",
-    "X_realigned = jp.offline_run_on(X)\n",
-    "U = jp.last_U\n",
-    "assert not np.allclose(U[:, :2], true_variables['C'])\n",
-    "\n",
-    "aligned_U, aligned_C = tr.jpca.align_column_spaces(U[:, :2], true_variables['C'])\n",
-    "assert np.allclose(aligned_U, aligned_C, atol=1e-4)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, X_dot, true_variables = tr.jpca.generate_circle_embedded_in_high_d(rng, m=1000, stddev=.1)\n",
-    "jp = tr.jpca.sjPCA()\n",
-    "\n",
-    "errors = []\n",
-    "g = (row[None,:] for row in X)\n",
-    "for row in jp.run_on(GeneratorDataSource(g)):\n",
-    "    U = jp.last_U\n",
-    "    if U is not None:\n",
-    "        aligned_U, aligned_C = tr.jpca.align_column_spaces(U[:, :2], true_variables['C'])\n",
-    "        errors.append(np.linalg.norm(aligned_U - aligned_C))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(np.arange(len(errors)) * 0.01, errors)\n",
-    "plt.ylabel('error')\n",
-    "plt.xlabel('time (s)')\n",
-    "plt.title('sjPCA convergence')\n",
-    "plt.semilogy();"
    ]
   }
  ],
