--- a/notebooks/dataset_plots.ipynb
+++ b/notebooks/dataset_plots.ipynb
@@ -415,10 +415,10 @@
      "evalue": "name 'al' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mal\u001B[49m\u001B[38;5;241m.\u001B[39mplotting_functions\u001B[38;5;241m.\u001B[39mcompare_metrics([br],\u001B[38;5;241m1\u001B[39m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'al' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mal\u001b[49m\u001b[38;5;241m.\u001b[39mplotting_functions\u001b[38;5;241m.\u001b[39mcompare_metrics([br],\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'al' is not defined"
      ]
     }
    ],
@@ -1005,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
