makes a proSVD convergence plot for error

--- a/workspace/convergence_plots.ipynb
+++ b/workspace/convergence_plots.ipynb
@@ -14,8 +14,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T20:06:23.006304Z",
-     "start_time": "2024-08-09T20:06:23.000465Z"
+     "end_time": "2024-08-12T15:12:55.872097Z",
+     "start_time": "2024-08-12T15:12:55.863880Z"
     },
     "collapsed": true
    },
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "from datasets import Leventhal24uDataset\n",
     "from picard import permute\n",
+    "import sklearn\n",
     "\n",
     "rng = np.random.default_rng(0)\n"
    ]
@@ -37,8 +38,8 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T19:55:21.846092Z",
-     "start_time": "2024-08-09T19:55:21.841547Z"
+     "end_time": "2024-08-12T15:12:55.907489Z",
+     "start_time": "2024-08-12T15:12:55.902513Z"
     }
    },
    "outputs": [],
@@ -61,8 +62,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T20:43:45.847838Z",
-     "start_time": "2024-08-09T20:43:45.842143Z"
+     "end_time": "2024-08-12T15:12:55.926814Z",
+     "start_time": "2024-08-12T15:12:55.918029Z"
     }
    },
    "outputs": [],
@@ -86,8 +87,8 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T20:44:20.339673Z",
-     "start_time": "2024-08-09T20:44:19.926595Z"
+     "end_time": "2024-08-12T15:12:56.231654Z",
+     "start_time": "2024-08-12T15:12:55.929339Z"
     }
    },
    "outputs": [],
@@ -98,20 +99,23 @@
     "\n",
     "distances, t = jp.get_distance_from_subspace_over_time(true_variables['C'])\n",
     "\n",
+    "\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(t, distances[:,0], color=colors[0])\n",
     "ax.set_xlabel('time (s)')\n",
     "ax.set_ylabel('error') # the error is the sum of (the absolute values of) the principal angles between the correct and discovered subspaces\n",
-    "ax.axhline(2 * np.pi/2, color='k', linestyle = '--')\n",
+    "# ax.axhline(2 * np.pi/2, color='k', linestyle = '--')\n",
     "ax.set_xticks([0,5,10,15])\n",
     "\n",
     "if log_y:\n",
     "    ax.semilogy()\n",
-    "    ax.set_yticks([1, .1])\n",
+    "    ax.set_yticks([1, .1, .01])\n",
     "    ax.minorticks_off()\n",
     "else:\n",
     "    ax.set_yticks([0,1,2,3])\n",
     "ax.set_title(\"sjPCA error\")\n",
+    "ax.set_ylim([.01, 4])\n",
     "\n"
    ]
   },
@@ -129,32 +133,24 @@
    "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T20:43:47.983656Z",
-     "start_time": "2024-08-09T20:43:47.205632Z"
+     "end_time": "2024-08-12T15:12:57.084090Z",
+     "start_time": "2024-08-12T15:12:56.232232Z"
     }
    },
    "outputs": [],
    "source": [
+    "\n",
     "ica = mmICA(alpha=.5, maxiter_cg=20, tol=1e-20, log_level=1)\n",
     "m = 1_000 # number of blocks\n",
     "n = 6 # size of each block\n",
-    "input_data = NumpyTimedDataSource(rng.laplace(size=(m, n, n)), timepoints = np.arange(m) * n * dt )\n",
     "\n",
-    "ica.offline_run_on(input_data);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-09T20:47:51.088120Z",
-     "start_time": "2024-08-09T20:47:50.890839Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "X = rng.laplace(size=(m, n, n))\n",
+    "input_data = NumpyTimedDataSource(X, timepoints = np.arange(m) * n * dt )\n",
+    "\n",
+    "ica.offline_run_on(input_data);\n",
+    "\n",
+    "\n",
+    "\n",
     "ts = []\n",
     "errors = []\n",
     "for W, t in zip(ica.log['W'], ica.log['t'], strict=True):\n",
@@ -170,19 +166,25 @@
     "ax.set_ylabel('error')\n",
     "ax.set_xticks([0,50,100,150])\n",
     "\n",
+    "W = sklearn.decomposition.FastICA(max_iter=5000).fit(X.transpose([0,2,1]).reshape(-1,n)).components_\n",
+    "offline_error = np.linalg.norm(permute(W) - np.eye(W.shape[0]))\n",
+    "\n",
     "if log_y:\n",
     "    ax.semilogy()\n",
-    "    ax.set_yticks([1, .1])\n",
+    "    ax.set_yticks([1, .1, .01])\n",
     "    ax.minorticks_off()\n",
     "else:\n",
     "    ax.set_yticks([0,1,2])\n",
     "\n",
-    "ax.set_title(\"mmICA error\")\n"
+    "ax.set_title(\"mmICA error\")\n",
+    "ax.set_ylim([.01, 4])\n",
+    "ax.axhline(offline_error, color='k', linestyle = '--')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": [
     "## proSVD"
@@ -191,11 +193,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T20:45:51.326024Z",
-     "start_time": "2024-08-09T20:45:51.110488Z"
+     "end_time": "2024-08-12T15:12:57.181677Z",
+     "start_time": "2024-08-12T15:12:57.084611Z"
     }
    },
    "outputs": [],
@@ -207,24 +209,35 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "dQ, t = pro.get_Q_stability()\n",
-    "ax.plot(t, dQ, color=colors[2])\n",
+    "Q_error, t = pro.get_distance_from_subspace_over_time(true_variables['C'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "ax.plot(t, Q_error, color=colors[2])\n",
     "ax.set_xticks([0,5,10,15])\n",
+    "\n",
+    "_, s, Vt = np.linalg.svd(X)\n",
+    "V = Vt[np.argsort(s)[::-1], :].T[:,:pro.k]\n",
+    "offline_error = al.utils.principle_angles(V,true_variables['C']).sum()\n",
+    "ax.axhline(offline_error, color='k', linestyle = '--')\n",
+    "\n",
     "\n",
     "if log_y:\n",
     "    ax.semilogy()\n",
-    "    ax.set_yticks([1e0, 1e-2, 1e-4])\n",
+    "    ax.set_yticks([1, .1, .01])\n",
     "    ax.minorticks_off()\n",
     "else:\n",
     "    ax.set_yticks([0,.5])\n",
     "\n",
     "ax.set_title(\"proSVD error\")\n",
+    "ax.set_ylim([.01, 4])\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "# Real data"
@@ -233,8 +246,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
+   "id": "12",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-12T15:12:57.603175Z",
+     "start_time": "2024-08-12T15:12:57.189450Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture \n",
@@ -244,11 +262,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T18:38:04.398996Z",
-     "start_time": "2024-08-09T18:37:34.192700Z"
+     "end_time": "2024-08-12T15:14:28.036645Z",
+     "start_time": "2024-08-12T15:12:57.604290Z"
     }
    },
    "outputs": [],
@@ -263,7 +281,7 @@
     "\n",
     "pipeline.offline_run_on(d.neural_data)\n",
     "\n",
-    "distances, t = jp.get_distance_from_subspace_over_time(jp.log['U'][-1][:,0:2])\n",
+    "distances, t = jp.get_distance_from_subspace_over_time(jp.log['U'][3000][:,0:2])\n",
     "plt.plot(t, distances)\n",
     "# plt.semilogy()\n"
    ]
@@ -271,11 +289,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-09T18:41:37.967375Z",
-     "start_time": "2024-08-09T18:41:37.960322Z"
+     "end_time": "2024-08-12T15:14:28.039526Z",
+     "start_time": "2024-08-12T15:14:28.037165Z"
     }
    },
    "outputs": [],
